--- a/index.html
+++ b/index.html
@@ -2,51 +2,83 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>cipher nova</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <title>cipher nova</title>
 </head>
 
-<body>
-    <header
-        class="fixed top-6 left-1/2 transform -translate-x-1/2 z-50 bg-black/60 backdrop-blur-md border border-gray-700 rounded-full px-8 py-4 flex justify-between items-center w-[90%] max-w-5xl shadow-2xl">
-        <h1
-            class=" text-2xl sm:text-2xl font-extrabold leading-tight bg-gradient-to-r from-purple-400 to-pink-500 bg-clip-text text-transparent">
-            cipher nova</h1>
-        <nav class="space-x-6 text-sm">
-            <a href="" class="hover:text-purple-400 transition">About</a>
-            <a href="" class="hover:text-purple-400 transition">Projects</a>
-            <a href="" class="hover:text-purple-400 transition">Contact</a>
-        </nav>
-    </header>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="container">
-        <div class="text">
-            <h1>Let's get started</h1>
-            <br>
-            <p>Let's get started with cipher nova</p>
-            <br>
-            <button>Get started</button>
-        </div>
-        <img src="team.png" alt="">
+<body class="bg-gray-900 text-white font-sans">
+
+  <!-- Header -->
+  <header class="fixed top-6 left-1/2 transform -translate-x-1/2 z-50 bg-black/60 backdrop-blur-md border border-gray-700 rounded-full px-8 py-4 flex justify-between items-center w-[90%] max-w-5xl shadow-2xl">
+    <h1 class="text-2xl font-extrabold bg-gradient-to-r from-purple-400 to-pink-500 bg-clip-text text-transparent">cipher nova</h1>
+    <nav class="space-x-6 text-sm">
+      <a href="#about" class="hover:text-purple-400 transition">About</a>
+      <a href="#projects" class="hover:text-purple-400 transition">Projects</a>
+      <a href="#contact" class="hover:text-purple-400 transition">Contact</a>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="pt-40 pb-20 px-6 text-center">
+    <div class="max-w-4xl mx-auto">
+      <h2 class="text-4xl sm:text-5xl font-bold mb-4">Let's get started</h2>
+      <p class="text-lg text-gray-300 mb-8">Join us on the Cipher Nova journey.</p>
+      <button class="bg-purple-500 hover:bg-purple-600 text-white font-semibold px-6 py-3 rounded-full transition">Get Started</button>
     </div>
-    <!-- <img src="bl.png" alt="" class="bl"> -->
-    <script src="3.4.js"></script>
+    <img src="team.png" alt="Team illustration" class="mx-auto mt-10 w-full max-w-md">
+  </section>
+
+  <!-- About Section -->
+  <section id="about" class="py-20 px-6 bg-gray-800">
+    <div class="max-w-4xl mx-auto text-center">
+      <h3 class="text-3xl font-bold mb-4">About Us</h3>
+      <p class="text-gray-300">Cipher Nova is a digital hub focused on creating innovative tech solutions, modern web experiences, and creative problem solving using the latest technologies.</p>
+    </div>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects" class="py-20 px-6">
+    <div class="max-w-6xl mx-auto">
+      <h3 class="text-3xl font-bold text-center mb-12">Projects</h3>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+        <!-- Example Project -->
+        <div class="bg-gray-800 p-6 rounded-lg shadow-lg hover:shadow-purple-500 transition">
+          <h4 class="text-xl font-semibold mb-2">Project One</h4>
+          <p class="text-gray-400">An AI-based platform that enhances user interaction and personalization.</p>
+        </div>
+        <div class="bg-gray-800 p-6 rounded-lg shadow-lg hover:shadow-purple-500 transition">
+          <h4 class="text-xl font-semibold mb-2">Project Two</h4>
+          <p class="text-gray-400">A real-time collaboration tool built for remote teams.</p>
+        </div>
+        <div class="bg-gray-800 p-6 rounded-lg shadow-lg hover:shadow-purple-500 transition">
+          <h4 class="text-xl font-semibold mb-2">Project Three</h4>
+          <p class="text-gray-400">A blockchain-powered secure file sharing system.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="py-20 px-6 bg-gray-800">
+    <div class="max-w-3xl mx-auto text-center">
+      <h3 class="text-3xl font-bold mb-4">Contact Us</h3>
+      <p class="text-gray-300 mb-6">Got a question or want to work together? Let’s talk.</p>
+      <form class="space-y-4">
+        <input type="text" placeholder="Your Name" class="w-full px-4 py-2 rounded-md bg-gray-700 border border-gray-600 focus:outline-none focus:ring-2 focus:ring-purple-500 text-white" />
+        <input type="email" placeholder="Your Email" class="w-full px-4 py-2 rounded-md bg-gray-700 border border-gray-600 focus:outline-none focus:ring-2 focus:ring-purple-500 text-white" />
+        <textarea rows="5" placeholder="Your Message" class="w-full px-4 py-2 rounded-md bg-gray-700 border border-gray-600 focus:outline-none focus:ring-2 focus:ring-purple-500 text-white"></textarea>
+        <button type="submit" class="bg-purple-500 hover:bg-purple-600 text-white font-semibold px-6 py-3 rounded-full transition">Send Message</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="py-6 text-center text-gray-500 text-sm bg-gray-900 border-t border-gray-700">
+    © 2025 Cipher Nova. All rights reserved.
+  </footer>
+
 </body>
 
 </html>
