--- a/index.html
+++ b/index.html
@@ -20,15 +20,29 @@
     </nav>
   </header>
 
-  <!-- Hero Section -->
-  <section class="pt-40 pb-20 px-6 text-center">
-    <div class="max-w-4xl mx-auto">
-      <h2 class="text-4xl sm:text-5xl font-bold mb-4">Let's get started</h2>
-      <p class="text-lg text-gray-300 mb-8">Join us on the Cipher Nova journey.</p>
-      <button class="bg-purple-500 hover:bg-purple-600 text-white font-semibold px-6 py-3 rounded-full transition">Get Started</button>
-    </div>
-    <img src="team.png" alt="Team illustration" class="mx-auto mt-10 w-full max-w-md">
-  </section>
+<!-- Hero Section -->
+<section class="relative pt-40 pb-28 px-6 text-center bg-gradient-to-b from-gray-900 to-black overflow-hidden">
+  <!-- خلفية ديكورية -->
+  <div class="absolute inset-0 opacity-20 bg-[url('https://www.transparenttextures.com/patterns/stardust.png')]"></div>
+
+  <div class="relative z-10 max-w-5xl mx-auto">
+    <h2 class="text-5xl sm:text-6xl font-extrabold mb-6 leading-tight bg-gradient-to-r from-purple-400 to-pink-500 bg-clip-text text-transparent">
+      Start Your Journey with Cipher Nova
+    </h2>
+    <p class="text-lg sm:text-xl text-gray-300 mb-10 max-w-2xl mx-auto">
+      We build futuristic digital solutions for creators, coders, and change-makers.
+    </p>
+    <a href="#projects" class="inline-block bg-purple-600 hover:bg-purple-700 text-white font-semibold px-8 py-4 rounded-full shadow-lg transition duration-300">
+      🚀 Get Started
+    </a>
+  </div>
+
+  <!-- صورة مميزة تحت -->
+  <div class="relative z-10 mt-16">
+    <img src="team.png" alt="Our Team" class="mx-auto w-full max-w-xl rounded-lg shadow-2xl">
+  </div>
+</section>
+
 
   <!-- About Section -->
   <section id="about" class="py-20 px-6 bg-gray-800">
