--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 <body class="bg-gray-900 text-white font-sans">
 
   <!-- Header -->
-  <header class="fixed top-6 left-1/2 transform -translate-x-1/2 z-50 bg-black/60 backdrop-blur-md border border-gray-700 rounded-full px-8 py-4 flex justify-between items-center w-[90%] max-w-5xl shadow-2xl">
-    <h1 class="text-2xl font-extrabold bg-gradient-to-r from-purple-400 to-pink-500 bg-clip-text text-transparent">cipher nova</h1>
-    <nav class="space-x-6 text-sm">
-      <a href="#about" class="hover:text-purple-400 transition">About</a>
-      <a href="#projects" class="hover:text-purple-400 transition">Projects</a>
-      <a href="#contact" class="hover:text-purple-400 transition">Contact</a>
-    </nav>
-  </header>
+    <header
+        class="fixed top-6 left-1/2 transform -translate-x-1/2 z-50 bg-black/60 backdrop-blur-md border border-gray-700 rounded-full px-8 py-4 flex justify-between items-center w-[90%] max-w-5xl shadow-2xl">
+        <h1
+            class=" text-2xl sm:text-2xl font-extrabold leading-tight bg-gradient-to-r from-purple-400 to-pink-500 bg-clip-text text-transparent">
+            cipher nova</h1>
+        <nav class="space-x-6 text-sm">
+            <a href="" class="hover:text-purple-400 transition">About</a>
+            <a href="" class="hover:text-purple-400 transition">Projects</a>
+            <a href="" class="hover:text-purple-400 transition">Contact</a>
+        </nav>
+    </header>
 
 <!-- Hero Section -->
 <section class="relative pt-40 pb-28 px-6 text-center bg-gradient-to-b from-gray-900 to-black overflow-hidden">
