--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 </a>
             </nav>
 
-            <button id="mobileMenuButton" class="md:hidden text-white focus:outline-none">
-                <i class="fas fa-bars text-2xl"></i>
+            <button id="mobileMenuButton" class="md:hidden text-white focus:outline-none t-50">
+                <i class="fas fa-bars text-2xl "></i>
             </button>
         </div>
 
@@ -140,7 +140,8 @@
             <div class="flex flex-col lg:flex-row items-center gap-12">
                 <div class="lg:w-1/2" data-aos="fade-right">
                     <div class="relative transform-3d hover:shadow-xl rounded-xl overflow-hidden">
-                        <img src="https://www.canva.com/design/DAGt-KBtQ1w/b9CoOZcM7xhTnaznck57jQ/watch?utm_content=DAGt-KBtQ1w&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h0890a6475a" alt="فريق Cipher Nova"
+                        <img src="https://raw.githubusercontent.com/Ciphernovab/web/refs/heads/main/poster.gif"
+                            alt="فريق Cipher Nova"
                             class="w-full h-auto rounded-xl shadow-2xl border-2 border-primary-500/20 hover:border-primary-500/50 transition-all">
                         <div class="absolute inset-0 bg-gradient-to-t from-dark-900/80 via-transparent to-transparent">
                         </div>
@@ -176,7 +177,7 @@
                                 <i class="fas fa-certificate text-primary-400"></i>
                             </div>
                             <div>
-                                <h4 class="text-white font-bold">50+</h4>
+                                <h4 class="text-white font-bold mr-1">50+</h4>
                                 <p class="text-gray-400 text-sm">مشروع ناجح</p>
                             </div>
                         </div>
@@ -187,7 +188,7 @@
                                 <i class="fas fa-users text-primary-400"></i>
                             </div>
                             <div>
-                                <h4 class="text-white font-bold">30+</h4>
+                                <h4 class="text-white font-bold mr-1">30+</h4>
                                 <p class="text-gray-400 text-sm">خبير معتمد</p>
                             </div>
                         </div>
@@ -195,11 +196,11 @@
 
                     <div class="flex flex-wrap gap-4">
                         <a href="#services" class="btn-custom flex items-center">
-                            <i class="fas fa-list mr-2"></i> خدماتنا
+                            <i class="fas fa-list mr-2 ml-2"></i> خدماتنا
                         </a>
                         <a href="#contact"
-                            class="btn bg-dark-700 hover:bg-dark-600 text-white border border-primary-500/30 hover:border-primary-500 flex items-center">
-                            <i class="fas fa-envelope mr-2"></i> تواصل معنا
+                            class="btn bg-dark-700 hover:bg-dark-600 text-white border border-primary-500/30 hover:border-primary-500 flex items-center p-1">
+                            <i class="fas fa-envelope mr-2 ml-2"></i> تواصل معنا
                         </a>
                     </div>
                 </div>
@@ -357,10 +358,15 @@
     <!-- Projects Section -->
     <section id="blog" class="section" style="background: rgba(179, 102, 255, 0.05);">
         <div class="container">
-            <h3 class="section-title" data-aos="fade-up">📰 آخر مقالاتنا</h3>
-            <p class="text-center mb-5" data-aos="fade-up" data-aos-delay="200">آخر الأخبار والنصائح في عالم الأمن
-                السيبراني</p>
+            <div class="text-center mb-16" data-aos="fade-up">
+                <h2 class="text-3xl md:text-4xl font-bold text-primary-400 mb-4" data-aos="fade-up">آخر مقالاتنا
+                </h2>
+                <p class="text-center mb-5" data-aos="fade-up" data-aos-delay="200">آخر الأخبار والنصائح في عالم
+                    الأمن
+                    السيبراني</p>
+            </div>
             <div class="blog">
+
                 <div class="blog-card" data-aos="fade-up">
                     <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80"
                         alt="Hacking Tools">
@@ -592,44 +598,6 @@
                         </form>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Comment Section -->
-    <section class="py-12 bg-dark-900">
-        <div class="container mx-auto px-4">
-            <div class="bg-dark-800 p-8 rounded-xl border border-dark-700 shadow-lg" data-aos="fade-up">
-                <h3 class="text-2xl font-bold text-primary-400 mb-6">💬 شاركنا رأيك</h3>
-
-                <form id="commentForm" class="mb-8">
-                    <div class="grid md:grid-cols-2 gap-6">
-                        <div>
-                            <label class="block text-gray-400 mb-2">اسمك</label>
-                            <input type="text" id="username"
-                                class="w-full bg-dark-700 border border-dark-600 rounded-lg px-4 py-3 text-white focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-transparent"
-                                required>
-                        </div>
-                        <div>
-                            <label class="block text-gray-400 mb-2">بريدك الإلكتروني (اختياري)</label>
-                            <input type="email" id="useremail"
-                                class="w-full bg-dark-700 border border-dark-600 rounded-lg px-4 py-3 text-white focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-transparent">
-                        </div>
-                    </div>
-
-                    <div class="mt-4">
-                        <label class="block text-gray-400 mb-2">تعليقك</label>
-                        <textarea id="comment"
-                            class="w-full bg-dark-700 border border-dark-600 rounded-lg px-4 py-3 text-white focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-transparent"
-                            rows="4" required></textarea>
-                    </div>
-
-                    <button type="submit" class="btn-custom mt-6 px-8 py-3">
-                        <i class="fas fa-comment mr-2"></i> إرسال التعليق
-                    </button>
-                </form>
-
-                <div id="commentsList" class="space-y-6"></div>
             </div>
         </div>
     </section>
