--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     <span
                         class="absolute -bottom-1 right-0 w-0 h-0.5 bg-primary-400 transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="#projects" class="text-white hover:text-primary-300 nav-link relative group">
-                    مشاريعنا
+                <a href="#blog" class="text-white hover:text-primary-300 nav-link relative group">
+                    مقالاتنا
                     <span
                         class="absolute -bottom-1 right-0 w-0 h-0.5 bg-primary-400 transition-all duration-300 group-hover:w-full"></span>
                 </a>
@@ -326,40 +326,11 @@
         </div>
     </section>
 
-    <!-- Stats Section -->
-    <section class="py-16 bg-gradient-to-r from-primary-600 to-primary-800 relative overflow-hidden">
-        <div class="absolute inset-0 bg-[linear-gradient(-228deg, #243AFF 0%, #6978FF 100%)] opacity-10"></div>
-
-        <div class="container mx-auto px-4">
-            <div class="grid md:grid-cols-4 gap-8 text-center">
-                <div class="p-6" data-aos="fade-up" data-aos-delay="100">
-                    <div class="text-4xl font-bold text-white mb-2 animate-count" data-count="150">0</div>
-                    <div class="text-primary-200 font-medium">مشروع ناجح</div>
-                </div>
-
-                <div class="p-6" data-aos="fade-up" data-aos-delay="200">
-                    <div class="text-4xl font-bold text-white mb-2 animate-count" data-count="50">0</div>
-                    <div class="text-primary-200 font-medium">عميل راضٍ</div>
-                </div>
-
-                <div class="p-6" data-aos="fade-up" data-aos-delay="300">
-                    <div class="text-4xl font-bold text-white mb-2 animate-count" data-count="30">0</div>
-                    <div class="text-primary-200 font-medium">خبير معتمد</div>
-                </div>
-
-                <div class="p-6" data-aos="fade-up" data-aos-delay="400">
-                    <div class="text-4xl font-bold text-white mb-2 animate-count" data-count="24">0</div>
-                    <div class="text-primary-200 font-medium">دعم فني</div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Projects Section -->
     <section id="blog" class="section" style="background: rgba(179, 102, 255, 0.05);">
         <div class="container">
             <div class="text-center mb-16" data-aos="fade-up">
-                <h2 class="text-3xl md:text-4xl font-bold text-primary-400 mb-4" data-aos="fade-up">آخر مقالاتنا
+                <h2 class="text-3xl md:text-4xl font-bold text-primary-400 mb-4" data-aos="fade-up" id="blog">آخر مقالاتنا
                 </h2>
                 <p class="text-center mb-5" data-aos="fade-up" data-aos-delay="200">آخر الأخبار والنصائح في عالم
                     الأمن
@@ -393,7 +364,7 @@
                 </div>
             </div>
             <div class="text-center mt-5" data-aos="fade-up">
-                <a href="#" class="cta-button">عرض جميع المقالات</a>
+                <a href="Blog.html" class="cta-button">عرض جميع المقالات</a>
             </div>
         </div>
     </section>
@@ -723,12 +694,6 @@
 
     <!-- Floating Buttons -->
     <div class="fixed bottom-6 left-6 space-y-3 z-50">
-        <a href="#contact"
-            class="w-14 h-14 bg-primary-500 rounded-full flex items-center justify-center text-white text-xl shadow-lg hover:bg-primary-600 transition-all transform hover:scale-110"
-            data-aos="fade-up" data-aos-delay="300">
-            <i class="fas fa-headset"></i>
-        </a>
-
         <a href="#" id="backToTop"
             class="w-14 h-14 bg-dark-700 rounded-full flex items-center justify-center text-white text-xl shadow-lg border border-dark-600 hover:border-primary-500 transition-all transform hover:scale-110 hidden">
             <i class="fas fa-arrow-up"></i>
