--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
     </div>
 
     <!-- Navbar -->
-    <header id="navbar" class="navbar fixed top-0 w-full z-50 bg-dark-900/80 shadow-md transition-all duration-300">
-        <div class="container mx-auto flex justify-between items-center p-4">
+    <header id="navbar"
+        class="navbar fixed top-0 w-full justify-center items-center  z-50 bg-dark-900/80 shadow-md transition-all duration-300 rounded-full">
+
+        <div class="container mx-auto flex justify-between items-center p-4  ">
             <div class="flex items-center space-x-2 space-x-reverse">
-                <div class="w-10 h-10 bg-primary-500 rounded-full flex items-center justify-center glow-box">
-                    <i class="fas fa-shield-alt text-dark-900 text-xl"></i>
-                </div>
                 <h1 class="text-2xl font-bold text-primary-400">Cipher Nova</h1>
             </div>
 
@@ -330,7 +329,8 @@
     <section id="blog" class="section" style="background: rgba(179, 102, 255, 0.05);">
         <div class="container">
             <div class="text-center mb-16" data-aos="fade-up">
-                <h2 class="text-3xl md:text-4xl font-bold text-primary-400 mb-4" data-aos="fade-up" id="blog">آخر مقالاتنا
+                <h2 class="text-3xl md:text-4xl font-bold text-primary-400 mb-4" data-aos="fade-up" id="blog">آخر
+                    مقالاتنا
                 </h2>
                 <p class="text-center mb-5" data-aos="fade-up" data-aos-delay="200">آخر الأخبار والنصائح في عالم
                     الأمن
